<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search_project"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
<!--    <item android:id="@+id/filter"-->
<!--        android:icon="@drawable/ic_filter_list_white_24dp"-->
<!--        android:title="@string/filter_projects"-->
<!--        app:showAsAction="always" />-->

    <item android:id="@+id/logout"
        android:title="@string/log_out"
        app:showAsAction="never" />

    <item android:id="@+id/userSettings"
        android:title="@string/user_settings"
        app:showAsAction="never" />

    <item android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>